<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/signupimage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:background="#80000000"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="16dp"
                android:text="Sign in"
                android:textColor="#fff"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/sup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="16dp"
                android:text="Sign Up"
                android:textColor="#000000"
                android:textSize="16dp" />
        </LinearLayout>
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <EditText
                android:id="@+id/etfirstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="#f0f0f4"
                android:drawableLeft="@drawable/usrusr"
                android:drawablePadding="16dp"
                android:hint="First Name"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="#000" />

            <EditText
                android:id="@+id/etlastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="#f0f0f4"
                android:drawableLeft="@drawable/usrusr"
                android:drawablePadding="16dp"
                android:hint="Last Name"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="#000" />

            <EditText
                android:id="@+id/etemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:background="#f0f0f4"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="16dp"
                android:hint="E-mail"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="#000" />


            <EditText
                android:id="@+id/etpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:background="#f0f0f4"
                android:drawableLeft="@drawable/lockers"
                android:drawablePadding="16dp"
                android:hint="Password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="#000" />


            <EditText
                android:id="@+id/etcpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:background="#f0f0f4"
                android:drawableLeft="@drawable/lockers"
                android:drawablePadding="16dp"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="#000" />
            <EditText
                android:id="@+id/etmobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:background="#f0f0f4"
                android:drawableLeft="@drawable/ic_mobile"
                android:drawablePadding="16dp"
                android:hint="Mobile"
                android:padding="12dp"
                android:textColor="#000" />


            <Button
                android:id="@+id/btnregister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/btnformate"
                android:gravity="center"
                android:padding="14dp"
                android:text="Register account"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="16dp" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>